# ArquitecturaYProtocolosDeInternet

./: .bashrc  .gitignore  LICENSE  README.md  bgp.ipynb  bgp.py  binmanipulation.py  commands.sh  dns.py  dns.toml  drawmroute.py  ip.py  main.py  mytty.py  net.py  ospf.py  patata.html  pyproject.toml  rip.py  route.json  route.py  test.xml  tui.py
APIGodot/: icon.svg.import  node_2d.tscn  project.godot
MQ/Fitxers (exemple 2)-20240331/: Ex3-updates.pcapng  Ex4-mroute.txt
MQ/Fitxers-20240325/: Ex1-eth0.pcapng  Ex1-eth1.pcapng  Ex1-eth2.pcapng  Ex2-db_network.txt  Ex2-db_router.txt  Ex2-routing_table.txt  Ex3-updates.pcapng  Ex4-mroute.txt
Net/: __init__.py  ip.py  loaders.py  ospf.py  pimd.py  route.py
Practicas/Material PA1-20240226/: install-api-labs
practiques/: .goutputstream-AYCMJ2  P01-E01-start  P01-E01-stop  P01-E02-start  P02-E01-start-ripd  P02-E01-start-zebra  P02-E02-start  P02-E02-start-ripd  P02-E02-start-zebra  P02-E02-stop  P03-E01-start-ospfd  P03-E01-start-zebra  P03-E01-stop  P03-E02-start  P03-E02-start-ospfd  P03-E02-start-zebra  P03-E02-stop  P06-E01-start  P06-E01-start-int  P06-E01-start-zebra  P06-E01-stop
practiques/scripts/: 02-copy-files  02-copy-files-PCs  04-rp-filter  04-start-containers  P02_init  P03-E02-Exercici8-config  P03_init  filter_timers_cost  monitor_show-ip-rip  plot_timers_cost_png  (+1 more)
scripts/: 01-create-containers  02-copy-files  02-copy-files-PCs  02-copy-files-PCs-pim  03-create-bridges  04-rp-filter  04-start-containers  05-stop-containers  06-clean-quagga-files  06-clean-quagga-files-PCs  07-destroy-containers  08-delete-bridges  09-start-pim  10-source-mgen  alias.sh  backuplxc.sh  get_ip_ifc  installer.sh  loadlxcbackup.sh  merge_tar.py  ping_time  plug-if-br  readme  split_tar.py  test_split_merge.py  tracepath_api  unplug-if-br  unzip-files  update_configs.py
tests/: dns.toml  dns_sub.toml  lab.db  route.txt  test.csv  test_binmanipulation.py  test_dns.py  test_ip.py  test_net.py  test_net_lxc.py  test_ospf.py  test_route.py
tui/: __init__.py  __main__.py  configure.py  show.py
(+133 files in other folders)
