[tool.poetry]
name = "resolvedor de API"
version = "0.0.1"
description = ""
authors = ["Sergio Gomez Damas"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.22.0"
pandas = "^2.2.0"
rich = "^12.6.0"
tqdm = "^4.62.3"
colorama = "^0.4.4"
networkx = "^2.7.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
