[tool.poetry]
name = "resolvedor de API"
version = "0.0.1"
description = ""
authors = ["Sergio Gomez Damas"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.5"
numpy = "^1.26.0"
pandas = "^1.5.0"
rich = "^12.6.0"
colorama = "^0.4.4"
networkx = "^2.7.3"
pytest = "^8.0.1"
pyvis = "^0.3.0"
scipy = "^1.12.0"
python-pcapng = "^2.1.1"
scapy = "^2.5.0"
pyyaml = "^6.0.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
black = "^23.1.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
